--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "redux-refresh",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A redux state preservation library",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
