--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-refresh",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A redux state preservation library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,10 +23,16 @@
     "@types/chai": "^4.2.11",
     "@types/crypto-js": "^3.1.45",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.4",
+    "@types/node": "^13.13.5",
     "@types/pluralize": "0.0.29",
+    "@types/react": "^16.9.34",
+    "@types/react-redux": "^7.1.8",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
   },
